📱: responsiveness added to avoid overlap between signature & legals

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -15,3 +15,13 @@
   color: var(--color-primary-variant);
   font-size: 0.8rem;
 }
+
+@media screen and (max-width: 1200px) {
+  .footer {
+    position: relative;
+    inset: auto;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+}
